# IMDLBenCo

./: .gitignore  LICENSE  MANIFEST.in  README.md  balanced_dataset.json  draft.sh  draft_catnet_protocol.sh  draft_test.sh  draft_test_evaluator.sh  draft_test_robustness.sh  pyproject.toml  reference.sh  release_to_pypi.sh  release_to_test_pypi.sh  requirements-dev.txt  requirements.txt  setup.py  test_datasets.json  test_datasets.py  test_datasets_backup.json
.github/ISSUE_TEMPLATE/: 1-bug-reports.yaml  2-ask-for-help.yaml  3-feature-request.yaml
.github/workflows/: python-publish.yml  tests.yml
IMDLBenCo/: __init__.py  build_functions.py  cli.py  registry.py  version.py
IMDLBenCo/cli_funcs/: __init__.py  cli_data.py  cli_env.py  cli_guide.py  (+2 more)
IMDLBench/: __init__.py  build_functions.py  registry.py  version.py
images/: 预处理Pipeline.drawio
runs/: demo_catnet_protocol_iml_vit.sh  demo_test_cat_net.sh  demo_test_iml_vit.sh  demo_test_mantra_net.sh  demo_test_robustness_cat_net.sh  demo_test_robustness_iml_vit.sh  demo_test_robustness_mantra_net.sh  demo_test_robustness_mvss.sh  demo_test_robustness_span.sh  demo_test_span.sh  demo_train.sh  demo_train_backbone_segformer.sh  demo_train_cat_net.sh  demo_train_mantra_net.sh  demo_train_mvss.sh  demo_train_pscc.sh  demo_train_span.sh  demo_train_trufor.sh
tests/: .gitignore  __init__.py  gradcam.py  test_appdirs.py  test_concat.py  test_datasets.py  test_datasets_and_evaluation.py  test_drop_last.py  test_evaluators.py  test_json_datasets.py  test_metrics_cpu.py  test_model_auto_parser.py  test_openfile.py  test_registers_dataset.py  test_registers_module.py  test_registry_bug.py  test_sklearn_F1s.py  test_subdataset.py  test_tail_dataset.py  test_version.py
(+201 files in other folders)
